--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -44,7 +44,7 @@
       </div>
       &nbsp;&nbsp;&nbsp;&nbsp;
       <div class="action" >
-        <button type="button" [disabled]="!formGroupUserInput.valid" (click)="addNewUser()" [routerLink]="['/login']"  class="btn btn-success">Register</button>
+        <button type="button" [disabled]="!formGroupUserInput.valid" (click)="addNewUserItem()" [routerLink]="['/login']"  class="btn btn-success">Register</button>
       </div>
 
     </form>     
