--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="col-md-3 col-md-offset-5">
+    <h3 style="text-align: center">Hello {{userName}} </h3>
     <h2 style="text-align: center">List of users </h2>
 </div>
 
@@ -61,7 +62,7 @@
           </td>
 
           <td>
-              <input type="button" class="btn btn-danger" value="Delete" (click)="deleteItem(user.id, i)"/>  
+              <input type="button" class="btn btn-danger" value="Delete" />  
               <input type="button" class="btn btn-primary" value="Detail" data-toggle="modal" data-target="#inforModal" />  
               <input type="button" class="btn btn-danger" value="Update" [routerLink]="['/register']"/>  
           </td>
@@ -69,5 +70,5 @@
       </tbody> 
   </table>
   &nbsp;&nbsp;&nbsp;&nbsp;
-  <p><a [routerLink]="['/login']" routerLinkActive="active">Logout?</a></p> 
+  <p><button class="btn btn-danger" (click) = "logOut()">Logout?</button></p> 
 </div>
