--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,8 +3,9 @@
 </div>
 
 <div class="col-md-4 col-md-offset-4">
+  <section>
   <div class="inputInforGroup">     
-        <form [formGroup]="formGroupUserInput" (ngSubmit)="onSubmit()" novalidate>
+        <form [formGroup]="formGroupUserInput" (ngSubmit)="checkLogin()" novalidate>
 
           <div class="inputUsername">
             <label>
@@ -30,6 +31,7 @@
           </div>    
         </form>     
   </div>
+  </section>
   
 </div>
 
