--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
-<div class="col-md-3 col-md-offset-5">
-    <h3 style="text-align: center">Hello {{userName}} </h3>
-    <h2 style="text-align: center">List of users </h2>
+<div class="col-md-4 col-md-offset-4">
+    <h3 style="text-align: center">Hello {{userName}} <button class="btn btn-danger" (click) = "logOut()">Logout?</button> </h3>
+    <h2 style="text-align: center">List of users </h2> 
 </div>
 
-<div class="col-md-7 col-md-offset-4">
+<div  class="col-md-7 col-md-offset-4">
   <table ng-deselect>
       <thead>
         <th class="text-center">
@@ -17,58 +17,49 @@
             Action
           </th>          
       </thead>
-      <tbody  *ngFor="let user of users; let i= index;">
-        <tr   (click)= "onSelect(user)" #ival> 
+      <tbody  *ngFor="let userItem of users; let i= index;">
+        <tr (click)= "onSelect(userItem)" #ival> 
 
-          <!-- //Modal open -->
-
-          <div class="modal fade" id="inforModal" tabindex="-1" role="dialog" aria-labelledby="inforModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h3 class="modal-title" id="inforModalLabel">User's Information</h3>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  User id: {{user.id}} --
-                  Username: {{user.username}} -- 
-                  Firstname: {{user.firstname}} -- 
-                  Last name: {{user.lastname}}                 
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Modal end -->  
-
-          <td> {{user.id}}</td>         
+          <td> {{userItem.id}}</td>         
           <td class="text-center">
-              {{user.username}}
+              {{userItem.username}}
           </td>
           <td class="text-center">
-            {{user.password}}
+            {{userItem.password}}
             </td>
           <td class="text-center">
-              {{user.firstname}}
+              {{userItem.firstname}}
           </td>
           <td class="text-center">
-            {{user.lastname}}
+            {{userItem.lastname}}
           </td>
-
           <td>
-              <input type="button" class="btn btn-danger" value="Delete" />  
-              <input type="button" class="btn btn-primary" value="Detail" data-toggle="modal" data-target="#inforModal" />  
-              <input type="button" class="btn btn-danger" value="Update" [routerLink]="['/register']"/>  
+              <input type="button" class="btn btn-danger" value="Delete" (click)="deleteUserItem(this.userItem.id)" [routerLink]="['/home']"/>          
           </td>
         </tr>             
       </tbody> 
   </table>
-  &nbsp;&nbsp;&nbsp;&nbsp;
-  <p><button class="btn btn-danger" (click) = "logOut()">Logout?</button></p> 
+</div>
+
+<div *ngIf="selectedUser" class="col-md-7 col-md-offset-4">
+  <h2>User: {{selectedUser.firstname}} information</h2>
+    <form [formGroup]="formGroupUserUpdate" novalidate >
+      <label>
+          Username:         
+      </label>
+      <input style="width: 51%" class="form-control" type="text" placeholder="{{selectedUser.username}}" formControlName="username" value="username" required />
+      <label>
+          Password:          
+      </label>
+      <input style="width: 51%" class="form-control" type="text" placeholder="{{selectedUser.password}}" formControlName="password" value="password" required/>
+      <label>
+          Firstname: </label>
+          <input style="width: 51%" class="form-control" type="text" placeholder="{{selectedUser.firstname}}" formControlName="firstname" value="firstname" required/>
+      <label>
+          Lastname:         
+      </label>
+      <input style="width: 51%" class="form-control" type="text" placeholder="{{selectedUser.lastname}}" formControlName="lastname" value="lastname" required/>
+      
+      <p><input type ="button" class="btn btn-success" value="{{ value }}" (click)="updateUserItem(this.formGroupUserUpdate.value)"/></p>
+  </form>
 </div>
