--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,50 +3,47 @@
   </div>
 
 <div class="col-md-7 col-md-offset-4">
-  <!-- <div class="inforRegisterGroup">      -->
-    <form [formGroup]="formGroupUserInput" novalidate>
+  <form [formGroup]="formGroupUserInput" novalidate>
+    <div class="inputId">
+      <label>
+        Id:
+      </label>
+      <input style="width: 50%" class="form-control" placeholder="id ..." type="number" formControlName="id" value="id" required />
+    </div>
+  
+    <div class="inputUsername">
+      <label>
+        Username:
+      </label>
+      <input style="width: 50%" class="form-control" placeholder="Username ...." type="text" formControlName="username" value="username" required/>
+    </div>
 
-      <div class="inputId">
-        <label>
-          Id:
-        </label>
-        <input style="width: 50%" class="form-control" placeholder="id ..." type="number" formControlName="id" value="id" required />
-      </div>
-    
-      <div class="inputUsername">
-        <label>
-          Username:
-        </label>
-        <input style="width: 50%" class="form-control" placeholder="Username ...." type="text" formControlName="username" value="username" required/>
-      </div>
+    <div class="inputPassword">
+      <label>
+        Password:
+      </label> 
+      <input style="width: 50%" class="form-control" placeholder="Password ..." type="text" formControlName="password" value="password" required minlength="6"/>
+    </div>
 
-      <div class="inputPassword">
-        <label>
-          Password:
-        </label> 
-        <input style="width: 50%" class="form-control" placeholder="Password ..." type="text" formControlName="password" value="password" required minlength="6"/>
-      </div>
-
-      <div class="inputFirstname">
-        <label>
-            First name:
-            
-        </label>
-        <input style="width: 50%" class="form-control" placeholder="first name ..." type="text" formControlName="firstname" value="firstname" required />
-      </div>
-
-      <div class="inputLastname">
-        <label>
-          Last name:
+    <div class="inputFirstname">
+      <label>
+          First name:
           
-        </label>
-        <input style="width: 50%" class="form-control" placeholder="Last name ..." type="text" formControlName="lastname" value="lastname" required />
-      </div>
-      &nbsp;&nbsp;&nbsp;&nbsp;
-      <div class="action" >
-        <button type="button" [disabled]="!formGroupUserInput.valid" (click)="addNewUserItem()" [routerLink]="['/login']"  class="btn btn-success">Register</button>
-      </div>
+      </label>
+      <input style="width: 50%" class="form-control" placeholder="first name ..." type="text" formControlName="firstname" value="firstname" required />
+    </div>
 
-    </form>     
-  <!-- </div> -->
+    <div class="inputLastname">
+      <label>
+        Last name:
+        
+      </label>
+      <input style="width: 50%" class="form-control" placeholder="Last name ..." type="text" formControlName="lastname" value="lastname" required />
+    </div>
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="action" >
+      <button type="button" [disabled]="!formGroupUserInput.valid" (click)="addNewUserItem(this.formGroupUserInput.value)" [routerLink]="['/login']" 
+              class="btn btn-success">Register</button>
+    </div>
+  </form>     
 </div>
